--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ If not, see http://www.gnu.org/licenses/.
 
 				<a href="#settingsPanel" data-role="button" class="ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all buttonStyle"></a>			
 				<h3>OwnSafe</h3>
-				<button type="submit" form="mainform" class="ui-btn ui-btn-right ui-corner-all buttonStyle" id="submit_button" value="Submit" tabindex="3" >Submit</button>
+				<button type="submit" form="mainform" class="ui-btn ui-btn-right ui-corner-all buttonStyle" data-theme="b" id="submit_button" value="Submit" tabindex="3" >Submit</button>
 			</div>
 			<div data-role="main" class="ui-content" id="main">
 					<form id="index_settings_form" class="ui-body ui-body-a ui-corner-all" data-ajax="false">
