--- a/www/index.html
+++ b/www/index.html
@@ -168,31 +168,47 @@ If not, see http://www.gnu.org/licenses/.
 		<div data-role="main" class="ui-content"  id="main">
 			<div id="install_page" class="ui-body ui-body-a ui-corner-all">
 				<p id="changepass_headline" class="ui-btn-icon-top ui-shadow-icon ui-icon-arrow-d titleText">Installation</p>
-					<h4>System requirements for your own server (e.g. Raspberry Pi):</h4>
-					<p>To run this application you need a system with following installed and useable componets (LAMP- or XAMPP-Environmant)</p>
+					<h4>Installation</h4>
+					<p>* Standard docker installation *</p>
 					<ul>
-						<li>Linux / Solaris / Windows / Mac OS X</li>
-						<li>Apache web server</li>
-            <li>PHP 5.2 or higher (mysqli module required)</li>
-						<li>MariaDB/MySql database</li>
-						<li>Optional: Sendmail/Posfix for sending mails</li>
+						<li>Clone the git repository: https://github.com/sepla/ownsafe.git</li>
+						<li>Go into the created "ownsafe" folder and run: docker-compose -f ./docker/docker-compose.yml up --build -d</li>
 					</ul>
-                <br>
-					<h4>Server installation</h4>
+          <br>
+					<p>* Portainer installation *</p>
 					<ul>
-						<li>DOWNLOAD the server application: <a href="#" onclick="window.open('https://github.com/splaza76/ownsafe', '_system');" class="ui-btn ui-mini ui-corner-all ui-btn-inline">Github.com</a></li>
-						<li>Unzip the files and copy the ownsafe folder to the HOME-directory of the Apache server (mostly /var/www/html)</li>
-						<li>Edit the configuration file (config.php in config directory): Enter on "DB" your values for the MySql database address, username, password and database name.<br>The application creates the necessary database tables automaticly</li>
-						<li>For testing server functionality call the application test site in your browser, http://your-server-url/ownsafe/test.php</li>
-				</ul>	
-    		    <p>In case of problems set the owner and group of the ownsafe folder (including all files) to www-data or change the access rights</p>
+						<li>Create a new Stack<br>Name: ownsafe<br>Use repository with URL: http://github.com/sepla/ownsafe.git<br>Compose path: docker/docker-compose.yml</li>
+						<li>Deploy the stack</li>
+					</ul>
+          <br>
+				<p>* Email configuration *</p>
+					<ul>
+						<li>Go to the "config"-folder at location of the created "ownsave_www-data" docker volume</li>
+						<li>Edit the config.php file and edit the following lines:<br><pre>
+    $mail->Host       = 'hostUrl';<br>
+    $mail->Username   = 'username';<br>
+    $mail->Password   = 'Pass1234';<br>
+    $mail->Port       = 465;<br>
+    $mailFrom         = 'ownsafe@local.host';<br>	
+    $mailNoReply      = 'no-reply@local.host';</pre></li>
+					</ul>
+          <br>
+         <p>* SSL/TLS Installation *</p>
+					<ul>
+						<li>Create a private key "ownsafe.key" and certificate "ownsafe.crt"</li>
+						<li>Go to the "ssl"-folder at the location of the "ownsave_nginx-conf" docker volume</li>
+						<li>Copy the created .key and .crt file into the "ssl"-folder</li>
+						<li>Edit the nginx.conf file on "ownsave_nginx-conf"-Volume and activate the following values:<pre>
+    listen 443 ssl;<br>
+    listen [::]:443 ssl;<br>
+    ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;<br>
+    ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;<br>
+    include /etc/nginx/conf.d/ssl/ssl-params.conf;</li>
+						<li>Restart the container, https works on port 444</pre></li>
+					</ul>
+          <br> 
          <br>
-				<hr>
-                
-			
-         <br>
-				</div>
-                <p>Other languages: <a href="INSTALL.TXT" type="button" target="_blank" download="INSTALL.TXT" class="ui-btn ui-mini ui-corner-all ui-btn-inline">INSTALL.TXT</a></p>
+				
 			</div>
 		</div>
 
