--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@ If not, see http://www.gnu.org/licenses/.
 	  window.onerror = function(error, url, line) {
       alert("ERR:"+error+" URL:"+url+" L:"+line);
 
+
     };
 	</script>
   <script src="js/jquery-2.1.4.min.js"></script>
@@ -69,6 +70,7 @@ If not, see http://www.gnu.org/licenses/.
       document.getElementById("login").setAttribute("data-theme", "b");
       Array.prototype.forEach.call(document.getElementsByTagName("*"), function (el) {
         el.setAttribute("data-theme", "b");
+
       });
     } else {
       Array.prototype.forEach.call(document.getElementsByTagName("*"), function (el) {
@@ -171,19 +173,19 @@ If not, see http://www.gnu.org/licenses/.
 					<h4>Installation</h4>
 					<p>* Standard docker installation *</p>
 					<ul>
-						<li>Clone the git repository: https://github.com/sepla/ownsafe.git</li>
-						<li>Go into the created "ownsafe" folder and run: docker-compose -f ./docker/docker-compose.yml up --build -d</li>
+						<li>Clone the git repository: <a href="#" onclick="window.open('https://github.com/sepla/ownsafe.git', '_system');">https://github.com/sepla/ownsafe.git</a></li>
+						<li>Go into the created "ownsafe" folder and run:<br>docker-compose -f ./docker/docker-compose.yml up --build -d</li>
 					</ul>
           <br>
 					<p>* Portainer installation *</p>
 					<ul>
-						<li>Create a new Stack<br>Name: ownsafe<br>Use repository with URL: http://github.com/sepla/ownsafe.git<br>Compose path: docker/docker-compose.yml</li>
+						<li>Create a new Stack<br>Name: ownsafe<br>Use repository with URL: <a href="#" onclick="window.open('https://github.com/sepla/ownsafe.git', '_system');">https://github.com/sepla/ownsafe.git</a><br>Compose path: docker/docker-compose.yml</li>
 						<li>Deploy the stack</li>
 					</ul>
           <br>
 				<p>* Email configuration *</p>
 					<ul>
-						<li>Go to the "config"-folder at location of the created "ownsave_www-data" docker volume</li>
+						<li>Go to the "config"-folder at the mount path of created "ownsafe_www-data" docker volume (e.g./var/lib/docker/volumes/ownsafe_www-data/_data)</li>
 						<li>Edit the config.php file and edit the following lines:<br><pre>
     $mail->Host       = 'hostUrl';<br>
     $mail->Username   = 'username';<br>
@@ -196,15 +198,21 @@ If not, see http://www.gnu.org/licenses/.
          <p>* SSL/TLS Installation *</p>
 					<ul>
 						<li>Create a private key "ownsafe.key" and certificate "ownsafe.crt"</li>
-						<li>Go to the "ssl"-folder at the location of the "ownsave_nginx-conf" docker volume</li>
+						<li>Go to the "ssl"-folder at the mount path of created "ownsafe_nginx-conf" docker volume (e.g. /var/lib/docker/volumes/ownsafe_nginx-conf/_data)</li>
 						<li>Copy the created .key and .crt file into the "ssl"-folder</li>
-						<li>Edit the nginx.conf file on "ownsave_nginx-conf"-Volume and activate the following values:<pre>
+						<li>Edit the nginx.conf file on "ownsafe_nginx-conf"-Volume and activate the following values:<pre>
     listen 443 ssl;<br>
     listen [::]:443 ssl;<br>
     ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;<br>
     ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;<br>
     include /etc/nginx/conf.d/ssl/ssl-params.conf;</li>
 						<li>Restart the container, https works on port 444</pre></li>
+					</ul>
+          <br> 
+           <p>* DB Import/Export *</p>
+					<ul>
+						<li>Import data (from sql file):<br>docker exec -i Ownsafe_DB mysql -uownsafe -pownsafe ownsafe < ownsafe.sql</li>
+						<li>Export data (to sql file):<br>docker exec -i Ownsafe_DB /usr/bin/mysqldump -uownsafe -pownsafe --skip-extended-insert --skip-comments ownsafe > ownsafe.sql</li>
 					</ul>
           <br> 
          <br>
@@ -218,15 +226,21 @@ If not, see http://www.gnu.org/licenses/.
 	</div>
 	<script>
     (function() {
+
         var exLog = console.log;
+
         console.log = function(msg) {
         exLog.apply(this, arguments);
+
         document.getElementById('consolew').innerHTML = msg; 
+
      }
+
     //    var exErr = console.error;
     //    console.error = function(msg) {
     //        exErr.apply(this, arguments);
     //        document.getElementById('consolew').innerHTML = document.getElementById('consolew').innerHTML+"<br>"+msg; 
+
     //    }
     })();
     console.log("Console"); // calling after defining it
